Revision history for perl distribution Convos

4.31 Not Released
 - Add backoff reconnect logic to the WebSocket
 - Fix issue where the WebSocket would not reconnect after being disconnected
 - Fix reloading user object on reconnect
 - Waiting for "online" and "offline" events in the browser does not seem to
   work as expected.

4.30 2020-08-05T09:29:00+0900
 - Will trim target when sending commands
   * This fixes commands like "/whois nick " with trailing spaces
 - User can resend messages when WebSocket reopens
 - Trying to fix WebSocket closing unexpectedly
 - Improved rendering of message details
 - Fix settings "secure" for client side "convos_js" cookie
 - Fix "Content-Security-Policy: unsafe-inline" header is no longer required #508
 - Fix issues with generating pretty connection names #507
 - Changed to base64 encoded email in markup to make it harder for bots
 - Changed to using "alternate stylesheet" to represent theme options
 - Removed invalid help in ConnectionForm #507
 - Removed "!" prefix from public bot commands #509
 - Updated JavaScript dependencies

4.29 2020-07-29T07:57:00+0900
 - Fix memory leak where connections would not be cleaned up when user was deleted
 - Fix copy invite/recover link to clipboard
 - Fix showing that you are offline (was removed by accident in 4.24)
 - Add support for HTML notifications
 - Made calculating "unread" faster

4.28 2020-07-24T18:05:00+0900
 - Fix detecting if Convos has focus, which again enables notifications

4.27 2020-07-24T16:20:00+0900
 - Removed auto-rotate image code
 - Fix not getting notifications when you send messages
 - Fix showing notifications when chat is not focused

4.26 2020-07-24T11:20:00+0900
 - Add bot "spool" action
 - Fix loading bot "karma" action
 - Fix typo in embedMaker #506

4.24 2020-07-24T09:55:00+0900
 - Add functionality for managing users #417 #505
 - Add API enpoint for listing users #417
 - Improved rotation of images #506